2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>

	* example-fsm-55/hh.c (main): Add call to chopstx_conf_idle.
	* example-fsm-55/Makefile (DEFS): Remove USE_WFI_FOR_IDLE.

	* chopstx.c (chx_init): Initialize sleep lock.
	(chopstx_conf_idle): New.
	* chopstx-cortex-m.c (idle): Support sleep.

	* mcu/usb-stm32f103.c (usb_lld_event_handler): Fix suspend/resume.

2017-11-14  NIIBE Yutaka  <gniibe@fsij.org>

	* usb_lld.h (DEVICE_STATE): Add prefix USB_DEVICE_STATE_.
	(USB_DEVICE_STATE_DEFAULT): New.

	* mcu/usb-stm32f103.c (usb_lld_init): Suspend/resume init.
	(usb_lld_event_handler): Add suspend/resume support.

	* example-cdc/usb-cdc.c: Follow the change of usb_lld.h.
	* example-cdc-gnu-linux/usb-cdc.c: Ditto.
	* example-fs-bb48/usb-cdc.c: Ditto.
	* example-fraucheky/main.c: Ditto.
	* example-fraucheky/Makefile (USE_SYS): Add for debug.

2017-11-13  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-stm32f103.c (usb_lld_init): Set up interrupt on errors.

	* usb_lld.h (USB_EVENT_DEVICE_WAKEUP): New.
	(INTR_REQ_USB): Define here.
	* mcu/usb-usbip.c, example-cdc/usb-cdc.c,
	example-fraucheky/main.c, example-fs-bb48/usb-cdc.c: Change
	for INTR_REQ_USB.

2017-11-10  NIIBE Yutaka  <gniibe@fsij.org>

	* chopstx-cortex-m.c (svc): Replace stack top to TP.
	(chx_sched): Return ->v correctly.

	* chopstx.c (chx_timer_expired): Fix timeout.

2017-10-11  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/sys-stm32f103.h (nonreturn_handler0, nonreturn_handler1): New.

2017-10-10  NIIBE Yutaka  <gniibe@fsij.org>

	* mcu/usb-usbip.c (usbip_run_server): Shutdown support.
	(usb_lld_shutdown): Shutdown glace-fully.

2017-10-10  NIIBE Yutaka  <gniibe@fsij.org>

	* VERSION: 1.5.
	* doc/chopstx.texi (VERSION): 1.5.
	* doc/chopstx-api.texi: Regenerated.

2017-10-09  NIIBE Yutaka  <gniibe@fsij.org>

	* example-cdc-gnu-linux/sample.c (main): Support debug option.

	* mcu/sys-gnu-linux.h (debug): New.
	* mcu/sys-gnu-linux.c: Use debug.
	* mcu/usb-usbip.c: Use debug.
