@@ -1,5 +1,11 @@
 2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
 
+	* chopstx.c (chopstx_conf_idle): Call chx_sleep_mode.
+	* chopstx-cortex-m.c (chx_sleep_mode): New.
+	* chopstx-gnu-linux.c (chx_sleep_mode): New.
+
+2017-11-15  NIIBE Yutaka  <gniibe@fsij.org>
+
 	* example-fsm-55/hh.c (main): Add call to chopstx_conf_idle.
 	* example-fsm-55/Makefile (DEFS): Remove USE_WFI_FOR_IDLE.
 
